--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -4,5 +4,8 @@
   "cssTheme": "GitHub Theme",
   "monospaceFontFamily": "JetBrainsMono NF",
   "baseFontSize": 18,
-  "textFontFamily": "Pridi,Kanit,Noto Serif Thai"
+  "textFontFamily": "Noto Serif Thai,Kanit",
+  "enabledCssSnippets": [
+    "customize"
+  ]
 }
